[gd_scene load_steps=8 format=3 uid="uid://c56xodqblrruk"]

[ext_resource type="Script" path="res://root_player.gd" id="1_e5dos"]
[ext_resource type="PackedScene" uid="uid://ysbpvegbtfi6" path="res://scenes/main_ui.tscn" id="1_u188x"]
[ext_resource type="PackedScene" uid="uid://cbldbimjt3s8g" path="res://scenes/tile_map_player.tscn" id="2_pxtra"]
[ext_resource type="PackedScene" uid="uid://d0e1ietq5fgdg" path="res://scenes/blank_rune.tscn" id="3_2yia6"]
[ext_resource type="PackedScene" uid="uid://knklcl5ypfqd" path="res://scenes/enemy.tscn" id="4_sqlqv"]
[ext_resource type="Resource" uid="uid://b606akji05or2" path="res://runes/frog.tres" id="5_qjrlp"]
[ext_resource type="Resource" uid="uid://c4p1snujn35eo" path="res://runes/archer.tres" id="6_03jui"]

[node name="Map_player" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main_Ui" parent="CanvasLayer" instance=ExtResource("1_u188x")]
unique_name_in_owner = true
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 90.0
offset_top = 250.0
offset_right = 90.0
offset_bottom = 250.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="AlertDialogue" type="ConfirmationDialog" parent="CanvasLayer"]
unique_name_in_owner = true
dialog_text = "Blank runes will be discarded when game starts, are you sure you want to proceed?"

[node name="ROOT" type="Node2D" parent="."]
position = Vector2(10, 190)
script = ExtResource("1_e5dos")

[node name="TileMapPlayer" parent="ROOT" instance=ExtResource("2_pxtra")]
rendering_quadrant_size = 20
layer_0/tile_data = PackedInt32Array(589839, 0, 0, 524303, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 655377, 0, 0, 655376, 0, 0, 655375, 0, 0, 589840, 0, 0, 524304, 0, 0, 524305, 0, 0, 589841, 0, 0, 589843, 0, 0, 524307, 0, 0, 655380, 0, 0, 589844, 0, 0, 524308, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 655381, 0, 0, 589845, 0, 0, 524309, 0, 0, 393233, 0, 0, 393232, 0, 0, 327696, 0, 0, 327697, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327702, 0, 0, 327701, 0, 0, 327700, 0, 0, 262164, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 262166, 0, 0, 262165, 0, 0, 327699, 0, 0, 196627, 0, 0, 524302, 0, 0, 589838, 0, 0, 589837, 0, 0, 589836, 0, 0, 524300, 0, 0, 524301, 0, 0, 458765, 0, 0, 458764, 0, 0, 393227, 0, 0, 327691, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 393228, 0, 0, 327692, 0, 0, 393230, 0, 0, 327694, 0, 0, 262158, 0, 0)

[node name="runes" type="Node2D" parent="ROOT"]

[node name="Blank_rune" parent="ROOT/runes" instance=ExtResource("3_2yia6")]
position = Vector2(330, 190)

[node name="Blank_rune2" parent="ROOT/runes" instance=ExtResource("3_2yia6")]
position = Vector2(350, 170)

[node name="Entities" type="Node2D" parent="ROOT"]

[node name="Enemy" parent="ROOT/Entities" instance=ExtResource("4_sqlqv")]
position = Vector2(430, 90)
type = ExtResource("5_qjrlp")

[node name="Enemy2" parent="ROOT/Entities" instance=ExtResource("4_sqlqv")]
position = Vector2(250, 110)

[node name="Enemy3" parent="ROOT/Entities" instance=ExtResource("4_sqlqv")]
position = Vector2(430, 190)
type = ExtResource("6_03jui")

[node name="Camera2D" type="Camera2D" parent="ROOT"]
position = Vector2(360, 180)
zoom = Vector2(2.11, 2.11)

[connection signal="start" from="CanvasLayer/Main_Ui" to="ROOT" method="_on_main_ui_start"]
